@@ -1,2 +1,70 @@
-@comment $NetBSD: PLIST,v 1.2 2003/07/31 18:40:58 jschauma Exp $
+@comment $NetBSD: PLIST,v 1.3 2005/03/04 16:04:59 reinoud Exp $
 bin/blender
+bin/blender-bin
+share/blender/scripts/Apply_def.py
+share/blender/scripts/Axiscopy.py
+share/blender/scripts/DirectX8Exporter.py
+share/blender/scripts/DirectXExporter.py
+share/blender/scripts/UVpaint05.py
+share/blender/scripts/ac3d_export.py
+share/blender/scripts/ac3d_import.py
+share/blender/scripts/batch_name_edit.py
+share/blender/scripts/bevel_center.py
+share/blender/scripts/blender2cal3d.py
+share/blender/scripts/bvh_export.py
+share/blender/scripts/bvh_import.py
+share/blender/scripts/clean_mesh.py
+share/blender/scripts/disp_paint.py
+share/blender/scripts/doc_browser.py
+share/blender/scripts/fixfromarmature.py
+share/blender/scripts/help_browser.py
+share/blender/scripts/help_getting_started.py
+share/blender/scripts/help_manual.py
+share/blender/scripts/help_py_reference.py
+share/blender/scripts/help_release_notes.py
+share/blender/scripts/help_tutorials.py
+share/blender/scripts/help_web_blender.py
+share/blender/scripts/help_web_devcomm.py
+share/blender/scripts/help_web_eshop.py
+share/blender/scripts/help_web_usercomm.py
+share/blender/scripts/hotkeys.py
+share/blender/scripts/kloputils.py
+share/blender/scripts/knife.py
+share/blender/scripts/lightwave_export.py
+share/blender/scripts/lightwave_import.py
+share/blender/scripts/mod_ai2obj.py
+share/blender/scripts/mod_blender.py
+share/blender/scripts/mod_eps2obj.py
+share/blender/scripts/mod_gimp2obj.py
+share/blender/scripts/mod_meshtools.py
+share/blender/scripts/mod_svg2obj.py
+share/blender/scripts/nendo_export.py
+share/blender/scripts/nendo_import.py
+share/blender/scripts/obdatacopier.py
+share/blender/scripts/obj_export.py
+share/blender/scripts/obj_import.py
+share/blender/scripts/off_export.py
+share/blender/scripts/off_import.py
+share/blender/scripts/paths_import.py
+share/blender/scripts/radiosity_export.py
+share/blender/scripts/radiosity_import.py
+share/blender/scripts/raw_export.py
+share/blender/scripts/raw_import.py
+share/blender/scripts/renameobjectbyblock.py
+share/blender/scripts/rvk1_torvk2.py
+share/blender/scripts/save_theme.py
+share/blender/scripts/sel_same.py
+share/blender/scripts/skin.py
+share/blender/scripts/slp_import.py
+share/blender/scripts/sysinfo.py
+share/blender/scripts/tex2uvbaker.py
+share/blender/scripts/truespace_export.py
+share/blender/scripts/truespace_import.py
+share/blender/scripts/unweld044.py
+share/blender/scripts/uv_export.py
+share/blender/scripts/videoscape_export.py
+share/blender/scripts/wings_export.py
+share/blender/scripts/wings_import.py
+share/blender/scripts/wrl2export.py
+@dirrm share/blender/scripts
+@dirrm share/blender
